edit responsive chart

--- a/index-chart.html
+++ b/index-chart.html
@@ -56,37 +56,43 @@
           </div>
         </nav>
         <section class="col-11">
-          <div class="d-flex flex-column bd-highlight mb-3">
+          <div class="d-flex bd-highlight mb-3">
             <div class="p-2 bd-highlight">
-              <div class="d-flex bd-highlight mb-3 justify-content-around">
-                <div class="p-2 bd-highlight container-income" style="width: 352px;
+              <div class="row bd-highlight mb-3 justify-content-around" style="flex-direction: row;">
+                <div class="p-2 bd-highlight col-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class="p-2" style="
                   height: 213px; background: linear-gradient(278.29deg, #FBB2B4 30.05%, rgba(255, 143, 178, 0) 133.19%);
                   filter: drop-shadow(10px 15px 10px rgba(255, 143, 178, 0.25));
                   border-radius: 10px;">
-                  <div class="text-income" style="align-items: center; padding: 30px 20px;">
-                    <p>Today's Income</p>
-                    <h4>Rp.1.000.000</h4>
-                    <p>+2% Yesterday</p>
+                    <div class="text-income" style="align-items: center; padding: 30px 20px;">
+                      <p>Today's Income</p>
+                      <h4>Rp.1.000.000</h4>
+                      <p>+2% Yesterday</p>
+                    </div>
                   </div>
                 </div>
-                <div class="p-2 bd-highlight container-income" style="width: 352px;
+                <div class="p-2 bd-highlight col-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class="p-2" style="
                   height: 213px; background: linear-gradient(278.29deg, #29DFFF 30.05%, rgba(41, 223, 255, 0) 133.19%);
                   filter: drop-shadow (10px 15px 10px rgba(41, 223, 255, 0.25));
                   border-radius: 10px;">
-                  <div class="text-income" style="align-items: center; padding: 30px 20px;">
-                    <p>Orders</p>
-                    <h4>3270</h4>
-                    <p>+5% Last Week</p>
+                    <div class="text-income" style="align-items: center; padding: 30px 20px;">
+                      <p>Orders</p>
+                      <h4>3270</h4>
+                      <p>+5% Last Week</p>
+                    </div>
                   </div>
                 </div>
-                <div class="p-2 bd-highlight container-income" style="width: 352px;
+                <div class="p-2 bd-highlight col-12 col-sm-12 col-md-4 col-lg-4">
+                  <div class="p-2" style="
                   height: 213px; background: linear-gradient(278.29deg, #AB84C8 30.05%, rgba(241, 201, 236, 0) 133.19%);
                   filter: drop-shadow(10px 15px 10px rgba(241, 201, 236, 0.25));
                   border-radius: 10px;">
-                  <div class="text-income" style="align-items: center; padding: 30px 20px;">
-                    <p>This Year's Income</p>
-                    <h4>Rp.10.000.000.000</h4>
-                    <p>+10% Last Year</p>
+                    <div class="text-income" style="align-items: center; padding: 30px 20px;">
+                      <p>This Year's Income</p>
+                      <h4>Rp.10.000.000.000</h4>
+                      <p>+10% Last Year</p>
+                    </div>
                   </div>
                 </div>
               </div>
