--- a/index.html
+++ b/index.html
@@ -1,231 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="stylesheet.css" />
-    <link rel="stylesheet" href="responsive.css" />
-    <link rel="stylesheet" href="JosefinSans-VariableFont_wght.ttf" />
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Foodies - Your Choosen Food</title>
-  </head>
-  <body>
-    <header>
-      <div class="main-header">
-        <div class="header-patty">
-          <a href="index.html"
-            ><img src="images/menu-patty.png" alt="hamburger"
-          /></a>
-        </div>
-        <div class="header-text">
-          <h3>Food Items</h3>
-        </div>
-        <div class="header-search">
-          <img src="images/magnifying-glass.png" alt="search" />
-        </div>
-      </div>
-      <div class="cart-header">
-        <h3>Cart</h3>
-        <div class="container-ellipse">
-          <p class="text-ellipse">0</p>
-          <img src="images/ellipse.png" alt="ellipse" />
-        </div>
-      </div>
-    </header>
-    <!-- MAIN START -->
-    <main>
-      <nav>
-        <div class="d-flex flex-column bd-highlight mb-3">
-          <div class="p-2 bd-highlight">
-            <a href="index-select.html">
-              <img src="images/fork.png" alt="fork" />
-            </a>
-          </div>
-          <div class="p-2 bd-highlight">
-            <a href="index-chart.html">
-              <img src="images/clipboard.png" alt="clipboard" />
-            </a>
-          </div>
-          <div class="p-2 bd-highlight">
-            <a href="#exampleModal" data-toggle="modal">
-              <img src="images/add.png" alt="add"
-            /></a>
-          </div>
-        </div>
-      </nav>
-      <section style="background-color: rgba(190, 195, 202, 0.3);">
-        <div class="menu-all">
-          <div class="menu-container">
-            <img
-              src="images/jeremy-ricketts-6ZnhM-xBpos-unsplash.png"
-              alt="espresso"
-            />
-            <h6>Espresso</h6>
-            <h6>Rp.10.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/bear.png" alt="coffeelatte" />
-            <h6>Coffee Latte</h6>
-            <h6>Rp.15.000</h6>
-          </div>
-          <div class="menu-container">
-            <img
-              src="images/firdaus-roslan-pN769u0KHNA-unsplash.png"
-              alt="cappucino"
-            />
-            <h6>Cappucino</h6>
-            <h6>Rp.5.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/redvelvet.png" alt="redvelvet" />
-            <h6>Red Velvet Latte</h6>
-            <h6>Rp.33.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/chocorum.png" alt="chocorhum" />
-            <h6>Choco Rhum</h6>
-            <h6>Rp.28.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/blackforest.png" alt="blackforest" />
-            <h6>Black Forest</h6>
-            <h6>Rp.30.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/chickenkatsu.png" alt="chickenkatsu" />
-            <h6>Chicken Katsu Dabu-dabu</h6>
-            <h6>Rp.60.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/salmon.png" alt="salmon" />
-            <h6>Salmon Truffle Teriyaki</h6>
-            <h6>Rp.60.000</h6>
-          </div>
-          <div class="menu-container">
-            <img src="images/wiener.png" alt="wiener" />
-            <h6>Wiener Schnitzel</h6>
-            <h6>Rp.69.000</h6>
-          </div>
-        </div>
-      </section>
-      <aside>
-        <div class="cart-main">
-          <img src="images/food-and-restaurant.png" alt="cart" />
-          <h5><b>Your cart is empty</b></h5>
-          <h6>Please add some item from the menu</h6>
-        </div>
-      </aside>
-    </main>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <link rel="stylesheet" href="stylesheet.css" />
+  <link rel="stylesheet" href="responsive.css" />
+  <link rel="stylesheet" href="JosefinSans-VariableFont_wght.ttf" />
 
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title align-self-start" id="exampleModalLabel">
-              Add Item
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
+  <title>Foodies - Your Choosen Food</title>
+</head>
+
+<body>
+  <header>
+    <div class="container-fluid">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-sm-12 col-md-8 col-lg-8">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-1">
+                  <div class="header-patty">
+                    <a href="index.html"><img src="images/menu-patty.png" alt="hamburger" /></a>
+                  </div>
+                </div>
+                <div class="col-md-10">
+                  <div class="header-text">
+                    <h3>Food Items</h3>
+                  </div>
+                </div>
+                <div class="col-md-1">
+                  <div class="header-search">
+                    <img src="images/magnifying-glass.png" alt="search" />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="modal-body">
-            <form>
-              <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label"
-                  >Name</label
-                >
-                <div class="col-sm-10">
-                  <input type="email" class="form-control" id="inputEmail3" />
-                </div>
+          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+            <div class="cart-header">
+              <h3>Cart</h3>
+              <div class="container-ellipse">
+                <p class="text-ellipse">0</p>
+                <img src="images/ellipse.png" alt="ellipse" />
               </div>
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label"
-                  >Image</label
-                >
-                <div class="col-sm-10">
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="inputPassword3"
-                  />
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label"
-                  >price</label
-                >
-                <div class="col-sm-10">
-                  <input
-                    type="password"
-                    class="form-control"
-                    id="inputPassword3"
-                  />
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label"
-                  >Category</label
-                >
-                <div class="form-group col-md-4">
-                  <select id="inputState" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                  </select>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn bg-danger" data-dismiss="modal">
-              <p style="color: white;">Cancel</p>
-            </button>
-            <button type="button" class="btn bg-info">
-              <p style="color: white;">Add</p>
-            </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+  </header>
+  <!-- <header>
+    <div class="main-header">
+      <div class="header-patty">
+        <a href="index.html"><img src="images/menu-patty.png" alt="hamburger" /></a>
+      </div>
+      <div class="header-text">
+        <h3>Food Items</h3>
+      </div>
+      <div class="header-search">
+        <img src="images/magnifying-glass.png" alt="search" />
+      </div>
+    </div>
+    <div class="cart-header">
+      <h3>Cart</h3>
+      <div class="container-ellipse">
+        <p class="text-ellipse">0</p>
+        <img src="images/ellipse.png" alt="ellipse" />
+      </div>
+    </div>
+  </header> -->
+  <!-- MAIN START -->
+  <main>
+    <nav>
+      <div class="d-flex flex-column bd-highlight mb-3">
+        <div class="p-2 bd-highlight">
+          <a href="index-select.html">
+            <img src="images/fork.png" alt="fork" />
+          </a>
+        </div>
+        <div class="p-2 bd-highlight">
+          <a href="index-chart.html">
+            <img src="images/clipboard.png" alt="clipboard" />
+          </a>
+        </div>
+        <div class="p-2 bd-highlight">
+          <a href="#exampleModal" data-toggle="modal">
+            <img src="images/add.png" alt="add" /></a>
+        </div>
+      </div>
+    </nav>
+    <section style="background-color: rgba(190, 195, 202, 0.3);">
+      <div class="menu-all">
+        <div class="menu-container">
+          <img src="images/jeremy-ricketts-6ZnhM-xBpos-unsplash.png" alt="espresso" />
+          <h6>Espresso</h6>
+          <h6>Rp.10.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/bear.png" alt="coffeelatte" />
+          <h6>Coffee Latte</h6>
+          <h6>Rp.15.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/firdaus-roslan-pN769u0KHNA-unsplash.png" alt="cappucino" />
+          <h6>Cappucino</h6>
+          <h6>Rp.5.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/redvelvet.png" alt="redvelvet" />
+          <h6>Red Velvet Latte</h6>
+          <h6>Rp.33.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/chocorum.png" alt="chocorhum" />
+          <h6>Choco Rhum</h6>
+          <h6>Rp.28.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/blackforest.png" alt="blackforest" />
+          <h6>Black Forest</h6>
+          <h6>Rp.30.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/chickenkatsu.png" alt="chickenkatsu" />
+          <h6>Chicken Katsu Dabu-dabu</h6>
+          <h6>Rp.60.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/salmon.png" alt="salmon" />
+          <h6>Salmon Truffle Teriyaki</h6>
+          <h6>Rp.60.000</h6>
+        </div>
+        <div class="menu-container">
+          <img src="images/wiener.png" alt="wiener" />
+          <h6>Wiener Schnitzel</h6>
+          <h6>Rp.69.000</h6>
+        </div>
+      </div>
+    </section>
+    <aside>
+      <div class="cart-main">
+        <img src="images/food-and-restaurant.png" alt="cart" />
+        <h5><b>Your cart is empty</b></h5>
+        <h6>Please add some item from the menu</h6>
+      </div>
+    </aside>
+  </main>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title align-self-start" id="exampleModalLabel">
+            Add Item
+          </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group row">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">Name</label>
+              <div class="col-sm-10">
+                <input type="email" class="form-control" id="inputEmail3" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword3" class="col-sm-2 col-form-label">Image</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword3" class="col-sm-2 col-form-label">price</label>
+              <div class="col-sm-10">
+                <input type="password" class="form-control" id="inputPassword3" />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword3" class="col-sm-2 col-form-label">Category</label>
+              <div class="form-group col-md-4">
+                <select id="inputState" class="form-control">
+                  <option selected>Choose...</option>
+                  <option>...</option>
+                </select>
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn bg-danger" data-dismiss="modal">
+            <p style="color: white;">Cancel</p>
+          </button>
+          <button type="button" class="btn bg-info">
+            <p style="color: white;">Add</p>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
