--- a/index.html
+++ b/index.html
@@ -21,20 +21,20 @@
     <div class="container-fluid">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-12 col-sm-12 col-md-8 col-lg-8">
+          <div class="col-8 col-sm-8 col-md-8 col-lg-8">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-md-1">
+                <div class="col-4 col-sm-1 col-md-1">
                   <div class="header-patty">
                     <a href="index.html"><img src="images/menu-patty.png" alt="hamburger" /></a>
                   </div>
                 </div>
-                <div class="col-md-10">
-                  <div class="header-text">
-                    <h3>Food Items</h3>
+                <div class="col-4 col-sm-10 col-md-10">
+                  <div class="header-text" style="text-align: center;">
+                    <h4>Food Items</h4>
                   </div>
                 </div>
-                <div class="col-md-1">
+                <div class="col-4 col-sm-1 col-md-1">
                   <div class="header-search">
                     <img src="images/magnifying-glass.png" alt="search" />
                   </div>
@@ -42,7 +42,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-sm-12 col-md-4 col-lg-4">
+          <div class="col-4 col-sm-4 col-md-4 col-lg-4">
             <div class="cart-header">
               <h3>Cart</h3>
               <div class="container-ellipse">
